--- a/html/Tableau.html
+++ b/html/Tableau.html
@@ -2,16 +2,16 @@
 <html>
     <head>
             <title>Caleb - Tableau</title>
-            <link rel="stylesheet" type="text/css" href="../Styles/bootstyles.css">
+            <link rel="stylesheet" type="text/css" href="../styles/bootstyles.css">
     </head>
     <body>
-        <div class = "common header">
+        <div class = "header">
             <h1>Tableau Visuals</h1>
             <p><a href="../index.html">Home</a>
             <a href="./about.html">About</a>
             </p>
         </div>
-        <div class = "common mainbody">
+        <div class = "mainbody">
             <div class='tableauPlaceholder' id='viz1649894381637' style='position: relative'><noscript><a href='#'><img alt='Final Project - Question 1 (Actual) ' src='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Fi&#47;FinalProject-Question1Actual&#47;Sheet1&#47;1_rss.png' style='border: none' /></a></noscript><object class='tableauViz'  style='display:none;'><param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F' /> <param name='embed_code_version' value='3' /> <param name='site_root' value='' /><param name='name' value='FinalProject-Question1Actual&#47;Sheet1' /><param name='tabs' value='no' /><param name='toolbar' value='yes' /><param name='static_image' value='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Fi&#47;FinalProject-Question1Actual&#47;Sheet1&#47;1.png' /> <param name='animate_transition' value='yes' /><param name='display_static_image' value='yes' /><param name='display_spinner' value='yes' /><param name='display_overlay' value='yes' /><param name='display_count' value='yes' /><param name='language' value='en-US' /><param name='filter' value='publish=yes' /></object></div>                <script type='text/javascript'>                    var divElement = document.getElementById('viz1649894381637');                    var vizElement = divElement.getElementsByTagName('object')[0];                    vizElement.style.width='100%';vizElement.style.height=(divElement.offsetWidth*0.75)+'px';                    var scriptElement = document.createElement('script');                    scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js';                    vizElement.parentNode.insertBefore(scriptElement, vizElement);                </script>
             <br>
             <p>This visual shows profits by state. Note that California and New York have the highest profit while Ohio and Texas have the lowest profit)</p>
@@ -32,7 +32,7 @@
             <br>
             <a class="otherclass" href="#top">Link to the Top of the Page</a>
         </div>
-        <div class = "common footer">
+        <div class = "footer">
             <p>By Caleb O</p>
         </div>
 
